update master branch with readme and epub folder

--- a/final product/OEBPS/1KI.xhtml
+++ b/final product/OEBPS/1KI.xhtml
@@ -1182,7 +1182,7 @@
 <aside epub:type='footnote' id="FN79"><p class="f"><a class="notebackref" href="#K15_14"><span class="notemark">*</span> 5.14</a>
  <span class="ft">ch. <a href='1KI.xhtml#K14_6'>4. 6</a></span></p></aside>
 <aside epub:type='footnote' id="FN80"><p class="f"><a class="notebackref" href="#K15_18"><span class="notemark">∥</span> 5.18</a>
- <span class="ft">Ezek. <a href='EZK.xhtml#EK27_9'>27. 9</a>.</span></p></aside>
+ <span class="ft">Or, Giblites, as Ezek. <a href='EZK.xhtml#EK27_9'>27. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN81"><p class="f"><a class="notebackref" href="#K16_1"><span class="notemark">*</span> 6.1</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R23_1'>3. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN82"><p class="f"><a class="notebackref" href="#K16_1"><span class="notemark">‡</span> 6.1</a>
@@ -1252,7 +1252,7 @@
 <aside epub:type='footnote' id="FN114"><p class="f"><a class="notebackref" href="#K17_14"><span class="notemark">†</span> 7.14</a>
  <span class="ft">Heb. the son of a widow woman.</span></p></aside>
 <aside epub:type='footnote' id="FN115"><p class="f"><a class="notebackref" href="#K17_15"><span class="notemark">†</span> 7.15</a>
- <span class="ft">Heb. fashional.</span></p></aside>
+ <span class="ft">Heb. fashioned.</span></p></aside>
 <aside epub:type='footnote' id="FN116"><p class="f"><a class="notebackref" href="#K17_21"><span class="notemark">*</span> 7.21</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R23_17'>3. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN117"><p class="f"><a class="notebackref" href="#K17_21"><span class="notemark">∥</span> 7.21</a>
@@ -1332,7 +1332,7 @@
 <aside epub:type='footnote' id="FN154"><p class="f"><a class="notebackref" href="#K18_45"><span class="notemark">∥</span> 8.45</a>
  <span class="ft">Or, right.</span></p></aside>
 <aside epub:type='footnote' id="FN155"><p class="f"><a class="notebackref" href="#K18_46"><span class="notemark">*</span> 8.46</a>
- <span class="ft">2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Eccles. <a href='ECC.xhtml#EC7_22'>7. 22</a>. 1 John 1. <a href='1JN.xhtml#1JN1_8'>8</a>, <a href='1JN.xhtml#1JN1_10'>10</a>.</span></p></aside>
+ <span class="ft">2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Eccles. <a href='ECC.xhtml#EC7_22'>7. 22</a>. 1 John 1. <a href='1JN.xhtml#J11_8'>8</a>, <a href='1JN.xhtml#J11_10'>10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN156"><p class="f"><a class="notebackref" href="#K18_47"><span class="notemark">†</span> 8.47</a>
  <span class="ft">Heb. bring back to their heart.</span></p></aside>
 <aside epub:type='footnote' id="FN157"><p class="f"><a class="notebackref" href="#K18_49"><span class="notemark">∥</span> 8.49</a>
@@ -1410,7 +1410,7 @@
 <aside epub:type='footnote' id="FN193"><p class="f"><a class="notebackref" href="#K110_19"><span class="notemark">†</span> 10.19</a>
  <span class="ft">Heb. on the hinder part thereof.</span></p></aside>
 <aside epub:type='footnote' id="FN194"><p class="f"><a class="notebackref" href="#K110_19"><span class="notemark">†</span> 10.19</a>
- <span class="ft">Heb. kands.</span></p></aside>
+ <span class="ft">Heb. hands.</span></p></aside>
 <aside epub:type='footnote' id="FN195"><p class="f"><a class="notebackref" href="#K110_20"><span class="notemark">†</span> 10.20</a>
  <span class="ft">Heb. so.</span></p></aside>
 <aside epub:type='footnote' id="FN196"><p class="f"><a class="notebackref" href="#K110_21"><span class="notemark">∥</span> 10.21</a>
@@ -1472,7 +1472,7 @@
 <aside epub:type='footnote' id="FN224"><p class="f"><a class="notebackref" href="#K111_42"><span class="notemark">†</span> 11.42</a>
  <span class="ft">Heb. days.</span></p></aside>
 <aside epub:type='footnote' id="FN225"><p class="f"><a class="notebackref" href="#K111_42"><span class="notemark">*</span> 11.42</a>
- <span class="ft">2 Chr. <a href='2CH.xhtml#R29_80'>9. 80</a>.</span></p></aside>
+ <span class="ft">2 Chr. <a href='2CH.xhtml#R29_30'>9. 30</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN226"><p class="f"><a class="notebackref" href="#K111_43"><span class="notemark">*</span> 11.43</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT1_7'>1. 7</a>, called Roboam.</span></p></aside>
 <aside epub:type='footnote' id="FN227"><p class="f"><a class="notebackref" href="#K112_1"><span class="notemark">*</span> 12.1</a>
