--- a/final product/OEBPS/2CH.xhtml
+++ b/final product/OEBPS/2CH.xhtml
@@ -678,7 +678,7 @@
 <span class="verse" id="R224_11">11&#160;</span> Now it came to pass, that at what time the chest was brought unto the king’s office by the hand of the Levites, and when they saw that <span class='add'>there was</span> much money, the king’s scribe and the high priest’s officer came and emptied the chest, and took it, and carried it to his place again. Thus they did day by day, and gathered money in abundance.
 <span class="verse" id="R224_12">12&#160;</span> And the king and Jehoiada gave it to such as did the work of the service of the house of the <span class='nd'>LORD</span>, and hired masons and carpenters to repair the house of the <span class='nd'>LORD</span>, and also such as wrought iron and brass to mend the house of the <span class='nd'>LORD</span>.
 <span class="verse" id="R224_13">13&#160;</span> So the workmen wrought, and <a href='#FN280' epub:type='noteref' class='noteref'>†</a>the work was perfected by them, and they set the house of God in his state, and strengthened it.
-<span class="verse" id="R224_14">14&#160;</span> And when they had finished <span class='add'>it</span>, they brought the rest of the money before the king and Jehoiada, whereof were made vessels for the house of the <span class='nd'>LORD</span>, <span class='add'>even</span> vessels to minister, and <a href='#FN281' epub:type='noteref' class='noteref'>∥</a>to offer <span class='add'>withal</span>, and spoons, and vessels of gold and silver. And they offered burnt offerings in the house of the <span class='nd'>LORD</span> continually all the days of Jehoiada.</div>
+<span class="verse" id="R224_14">14&#160;</span> And when they had finished <span class='add'>it</span>, they brought the rest of the money before the king and Jehoiada, whereof were made vessels for the house of the <span class='nd'>LORD</span>, <span class='add'>even</span> vessels to minister, and to <a href='#FN281' epub:type='noteref' class='noteref'>∥</a>offer <span class='add'>withal</span>, and spoons, and vessels of gold and silver. And they offered burnt offerings in the house of the <span class='nd'>LORD</span> continually all the days of Jehoiada.</div>
 <div class='p'>
 <span class="verse" id="R224_15">15&#160;</span>¶ But Jehoiada waxed old, and was full of days when he died; an hundred and thirty years old <span class='add'>was he</span> when he died.
 <span class="verse" id="R224_16">16&#160;</span> And they buried him in the city of David among the kings, because he had done good in Israel, both toward God, and toward his house.
@@ -987,8 +987,8 @@
 <span class="verse" id="R234_2">2&#160;</span> And he did <span class='add'>that which was</span> right in the sight of the <span class='nd'>LORD</span>, and walked in the ways of David his father, and declined <span class='add'>neither</span> to the right hand, nor to the left. </div>
 <div class='p'>
 <span class="verse" id="R234_3">3&#160;</span>¶ For in the eighth year of his reign, while he was yet young, he began to seek after the God of David his father: and in the twelfth year he began <a href='#FN429' epub:type='noteref' class='noteref'>*</a>to purge Judah and Jerusalem from the high places, and the groves, and the carved images, and the molten images.
-<span class="verse" id="R234_4">4&#160;</span><a href='#FN430' epub:type='noteref' class='noteref'>*</a> And they brake down the altars of Baalim in his presence; and the images, that <span class='add'>were</span> on high above them, he cut down; and the groves, and the carved images, and the molten images, he brake in pieces, and made dust <span class='add'>of them</span>, and strowed <span class='add'>it</span> upon the <a href='#FN431' epub:type='noteref' class='noteref'>∥</a>graves of them that had sacrificed unto them.
-<span class="verse" id="R234_5">5&#160;</span><a href='#FN432' epub:type='noteref' class='noteref'>†</a> And he burnt the bones of the priests upon their altars, and cleansed Judah and Jerusalem.
+<span class="verse" id="R234_4">4&#160;</span><a href='#FN430' epub:type='noteref' class='noteref'>*</a> And they brake down the altars of Baalim in his presence; and <a href='#FN431' epub:type='noteref' class='noteref'>∥</a>the images, that <span class='add'>were</span> on high above them, he cut down; and the groves, and the carved images, and the molten images, he brake in pieces, and made dust <span class='add'>of them</span>, and strowed <span class='add'>it</span> upon the <a href='#FN432' epub:type='noteref' class='noteref'>†</a>graves of them that had sacrificed unto them.
+<span class="verse" id="R234_5">5&#160;</span> And he burnt the bones of the priests upon their altars, and cleansed Judah and Jerusalem.
 <span class="verse" id="R234_6">6&#160;</span>And <span class='add'>so did he</span> in the cities of Manasseh, and Ephraim, and Simeon, even unto Naphtali, with their <a href='#FN433' epub:type='noteref' class='noteref'>∥</a>mattocks round about.
 <span class="verse" id="R234_7">7&#160;</span> And when he had broken down the altars and the groves, and had beaten the graven images <a href='#FN434' epub:type='noteref' class='noteref'>†</a>into powder, and cut down all the idols throughout all the land of Israel, he returned to Jerusalem.</div>
 <div class='p'>
@@ -1100,7 +1100,7 @@
 <aside epub:type='footnote' id="FN8"><p class="f"><a class="notebackref" href="#R21_9"><span class="notemark">†</span> 1.9</a>
  <span class="ft">Heb. much as the dust of the earth.</span></p></aside>
 <aside epub:type='footnote' id="FN9"><p class="f"><a class="notebackref" href="#R21_10"><span class="notemark">*</span> 1.10</a>
- <span class="ft">1 Kings 8. <a href='1KI.xhtml#K18_11'>11</a>, <a href='1KI.xhtml#K18_12'>12</a>.</span></p></aside>
+ <span class="ft">1 Kings 3. <a href='1KI.xhtml#K13_11'>11</a>, <a href='1KI.xhtml#K13_12'>12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN10"><p class="f"><a class="notebackref" href="#R21_10"><span class="notemark">*</span> 1.10</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU27_17'>27. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN11"><p class="f"><a class="notebackref" href="#R21_12"><span class="notemark">*</span> 1.12</a>
@@ -1126,7 +1126,7 @@
 <aside epub:type='footnote' id="FN21"><p class="f"><a class="notebackref" href="#R22_6"><span class="notemark">†</span> 2.6</a>
  <span class="ft">Heb. hath retained, or, obtained strength.</span></p></aside>
 <aside epub:type='footnote' id="FN22"><p class="f"><a class="notebackref" href="#R22_7"><span class="notemark">†</span> 2.7</a>
- <span class="ft">Heb. to grace gravings.</span></p></aside>
+ <span class="ft">Heb. to grave gravings.</span></p></aside>
 <aside epub:type='footnote' id="FN23"><p class="f"><a class="notebackref" href="#R22_8"><span class="notemark">∥</span> 2.8</a>
  <span class="ft">1 Kings <a href='1KI.xhtml#K110_11'>10. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN24"><p class="f"><a class="notebackref" href="#R22_9"><span class="notemark">†</span> 2.9</a>
@@ -1272,7 +1272,7 @@
 <aside epub:type='footnote' id="FN94"><p class="f"><a class="notebackref" href="#R26_35"><span class="notemark">∥</span> 6.35</a>
  <span class="ft">Or, right.</span></p></aside>
 <aside epub:type='footnote' id="FN95"><p class="f"><a class="notebackref" href="#R26_36"><span class="notemark">*</span> 6.36</a>
- <span class="ft">Prov. <a href='PRO.xhtml#PR20_9'>20 9</a>. Eccles. <a href='ECC.xhtml#EC7_21'>7. 21</a>. James <a href='JAS.xhtml#JM3_2'>3. 2</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1. 8</a>.</span></p></aside>
+ <span class="ft">Prov. <a href='PRO.xhtml#PR20_9'>20 9</a>. Eccles. <a href='ECC.xhtml#EC7_21'>7. 21</a>. James <a href='JAS.xhtml#JM3_2'>3. 2</a>. 1 John <a href='1JN.xhtml#J11_8'>1. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN96"><p class="f"><a class="notebackref" href="#R26_36"><span class="notemark">†</span> 6.36</a>
  <span class="ft">Heb. they that take them captives carry them away.</span></p></aside>
 <aside epub:type='footnote' id="FN97"><p class="f"><a class="notebackref" href="#R26_37"><span class="notemark">†</span> 6.37</a>
@@ -1596,7 +1596,7 @@
 <aside epub:type='footnote' id="FN256"><p class="f"><a class="notebackref" href="#R222_6"><span class="notemark">†</span> 22.6</a>
  <span class="ft">Heb. wherewith they wounded him.</span></p></aside>
 <aside epub:type='footnote' id="FN257"><p class="f"><a class="notebackref" href="#R222_6"><span class="notemark">*</span> 22.6</a>
- <span class="ft">ver. <a href='2CH.xhtml#R222_1'>1.</a> and Jehoahaz, 21. 17.</span></p></aside>
+ <span class="ft">ver. <a href='2CH.xhtml#R222_1'>1.</a> and Jehoahaz, <a href='2CH.xhtml#R221_17'>21. 17.</a></span></p></aside>
 <aside epub:type='footnote' id="FN258"><p class="f"><a class="notebackref" href="#R222_7"><span class="notemark">†</span> 22.7</a>
  <span class="ft">Heb treading down.</span></p></aside>
 <aside epub:type='footnote' id="FN259"><p class="f"><a class="notebackref" href="#R222_7"><span class="notemark">*</span> 22.7</a>
@@ -1630,7 +1630,7 @@
 <aside epub:type='footnote' id="FN273"><p class="f"><a class="notebackref" href="#R223_18"><span class="notemark">†</span> 23.18</a>
  <span class="ft">Heb. by the hands of David.</span></p></aside>
 <aside epub:type='footnote' id="FN274"><p class="f"><a class="notebackref" href="#R223_19"><span class="notemark">*</span> 23.19</a>
- <span class="ft">1 chr. 26. 1, &amp;c.</span></p></aside>
+ <span class="ft">1 chr. <a href='1CH.xhtml#R126_1'>26. 1</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN275"><p class="f"><a class="notebackref" href="#R224_1"><span class="notemark">*</span> 24.1</a>
  <span class="ft">2 Kings <a href='2KI.xhtml#K212_1'>12 1</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN276"><p class="f"><a class="notebackref" href="#R224_4"><span class="notemark">†</span> 24.4</a>
@@ -1945,7 +1945,7 @@
  <span class="ft">Lev. <a href='LEV.xhtml#LV26_30'>26. 30</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN431"><p class="f"><a class="notebackref" href="#R234_4"><span class="notemark">∥</span> 34.4</a>
  <span class="ft">Or, sun images.</span></p></aside>
-<aside epub:type='footnote' id="FN432"><p class="f"><a class="notebackref" href="#R234_5"><span class="notemark">†</span> 34.5</a>
+<aside epub:type='footnote' id="FN432"><p class="f"><a class="notebackref" href="#R234_4"><span class="notemark">†</span> 34.4</a>
  <span class="ft">Heb. face of the graves.</span></p></aside>
 <aside epub:type='footnote' id="FN433"><p class="f"><a class="notebackref" href="#R234_6"><span class="notemark">∥</span> 34.6</a>
  <span class="ft">Or, mauls.</span></p></aside>
@@ -2020,7 +2020,7 @@
 <aside epub:type='footnote' id="FN468"><p class="f"><a class="notebackref" href="#R235_21"><span class="notemark">†</span> 35.21</a>
  <span class="ft">Heb. the house of my war.</span></p></aside>
 <aside epub:type='footnote' id="FN469"><p class="f"><a class="notebackref" href="#R235_23"><span class="notemark">†</span> 35.23</a>
- <span class="ft">Heb. made sich.</span></p></aside>
+ <span class="ft">Heb. made sick.</span></p></aside>
 <aside epub:type='footnote' id="FN470"><p class="f"><a class="notebackref" href="#R235_24"><span class="notemark">∥</span> 35.24</a>
  <span class="ft">Or, among the sepulchres.</span></p></aside>
 <aside epub:type='footnote' id="FN471"><p class="f"><a class="notebackref" href="#R235_24"><span class="notemark">*</span> 35.24</a>
@@ -2046,7 +2046,7 @@
 <aside epub:type='footnote' id="FN481"><p class="f"><a class="notebackref" href="#R236_10"><span class="notemark">†</span> 36.10</a>
  <span class="ft">Heb. vessels of desire.</span></p></aside>
 <aside epub:type='footnote' id="FN482"><p class="f"><a class="notebackref" href="#R236_10"><span class="notemark">∥</span> 36.10</a>
- <span class="ft">Mattaniah, <a href='MAT.xhtml#MT2_24'>2 Kings 24</a>. <a href='MAT.xhtml#MT17_0'>17.</a> Jer. <a href='JER.xhtml#JR37_1'>37. 1</a>.</span></p></aside>
+ <span class="ft">Mattaniah, 2 Kings <a href='2KI.xhtml#K224_17'>24. 17.</a> Jer. <a href='JER.xhtml#JR37_1'>37. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN483"><p class="f"><a class="notebackref" href="#R236_11"><span class="notemark">*</span> 36.11</a>
  <span class="ft">2 Kings <a href='2KI.xhtml#K224_18'>24. 18</a> Jer <a href='JER.xhtml#JR52_1'>52. 1</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN484"><p class="f"><a class="notebackref" href="#R236_15"><span class="notemark">*</span> 36.15</a>
