--- a/final product/OEBPS/JOB.xhtml
+++ b/final product/OEBPS/JOB.xhtml
@@ -1317,7 +1317,7 @@
 <aside epub:type='footnote' id="FN3"><p class="f"><a class="notebackref" href="#JB1_3"><span class="notemark">∥</span> 1.3</a>
  <span class="ft">Or, husbandry.</span></p></aside>
 <aside epub:type='footnote' id="FN4"><p class="f"><a class="notebackref" href="#JB1_3"><span class="notemark">†</span> 1.3</a>
- <span class="ft">Heb. sons of the cast.</span></p></aside>
+ <span class="ft">Heb. sons of the east.</span></p></aside>
 <aside epub:type='footnote' id="FN5"><p class="f"><a class="notebackref" href="#JB1_5"><span class="notemark">*</span> 1.5</a>
  <span class="ft">1 Kings 21. <a href='1KI.xhtml#K121_10'>10</a>, <a href='1KI.xhtml#K121_13'>13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN6"><p class="f"><a class="notebackref" href="#JB1_5"><span class="notemark">†</span> 1.5</a>
@@ -1359,7 +1359,7 @@
 <aside epub:type='footnote' id="FN24"><p class="f"><a class="notebackref" href="#JB3_2"><span class="notemark">†</span> 3.2</a>
  <span class="ft">Heb. answered.</span></p></aside>
 <aside epub:type='footnote' id="FN25"><p class="f"><a class="notebackref" href="#JB3_3"><span class="notemark">*</span> 3.3</a>
- <span class="ft">ch. 10. <a href='JOB.xhtml#JB10_13'>13</a>, <a href='JOB.xhtml#JB10_19'>19</a>. Jer. <a href='JER.xhtml#JR20_14'>20. 14</a>.</span></p></aside>
+ <span class="ft">ch. 10. <a href='JOB.xhtml#JB10_18'>18</a>, <a href='JOB.xhtml#JB10_19'>19</a>. Jer. <a href='JER.xhtml#JR20_14'>20. 14</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN26"><p class="f"><a class="notebackref" href="#JB3_5"><span class="notemark">∥</span> 3.5</a>
  <span class="ft">Or, challenge it.</span></p></aside>
 <aside epub:type='footnote' id="FN27"><p class="f"><a class="notebackref" href="#JB3_5"><span class="notemark">∥</span> 3.5</a>
@@ -1445,7 +1445,7 @@
 <aside epub:type='footnote' id="FN67"><p class="f"><a class="notebackref" href="#JB5_17"><span class="notemark">*</span> 5.17</a>
  <span class="ft">Prov. <a href='PRO.xhtml#PR3_12'>3. 12</a>. Heb. <a href='HEB.xhtml#HB12_5'>12. 5</a>. James <a href='JAS.xhtml#JM1_12'>1. 12</a>. Rev. <a href='REV.xhtml#RV3_19'>3. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN68"><p class="f"><a class="notebackref" href="#JB5_18"><span class="notemark">*</span> 5.18</a>
- <span class="ft">32. 39. 1 Sam. <a href='1SA.xhtml#S12_6'>2. 6</a> Isai. <a href='ISA.xhtml#IS30_26'>30. 26</a>. Hos. <a href='HOS.xhtml#HS6_1'>6. 1</a>.</span></p></aside>
+ <span class="ft">Deut. <a href='DEU.xhtml#DT32_39'>32. 39.</a> 1 Sam. <a href='1SA.xhtml#S12_6'>2. 6</a> Isai. <a href='ISA.xhtml#IS30_26'>30. 26</a>. Hos. <a href='HOS.xhtml#HS6_1'>6. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN69"><p class="f"><a class="notebackref" href="#JB5_19"><span class="notemark">*</span> 5.19</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS91_3'>91. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN70"><p class="f"><a class="notebackref" href="#JB5_20"><span class="notemark">†</span> 5.20</a>
@@ -1503,7 +1503,7 @@
 <aside epub:type='footnote' id="FN96"><p class="f"><a class="notebackref" href="#JB7_4"><span class="notemark">†</span> 7.4</a>
  <span class="ft">Heb. the evening be measured?</span></p></aside>
 <aside epub:type='footnote' id="FN97"><p class="f"><a class="notebackref" href="#JB7_6"><span class="notemark">*</span> 7.6</a>
- <span class="ft">ch. <a href='JOB.xhtml#JB16_22'>16. 22</a>. Pa. <a href='JOB.xhtml#JB90_6'>90. 6</a>. &amp;c <a href='JOB.xhtml#JB102_11'>102. 11</a>. &amp;c <a href='JOB.xhtml#JB103_15'>103. 15</a>. &amp;c <a href='JOB.xhtml#JB144_4'>144. 4</a>. Isai. <a href='ISA.xhtml#IS40_6'>40. 6</a> James <a href='JAS.xhtml#JM4_14'>4. 14</a>.</span></p></aside>
+ <span class="ft">ch. <a href='JOB.xhtml#JB16_22'>16. 22</a>. Psal. <a href='PSA.xhtml#PS90_6'>90. 6</a>. &amp;c <a href='PSA.xhtml#PS102_11'>102. 11</a>. &amp;c <a href='PSA.xhtml#PS103_15'>103. 15</a>. &amp;c <a href='PSA.xhtml#PS144_4'>144. 4</a>. Isai. <a href='ISA.xhtml#IS40_6'>40. 6</a> James <a href='JAS.xhtml#JM4_14'>4. 14</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN98"><p class="f"><a class="notebackref" href="#JB7_7"><span class="notemark">†</span> 7.7</a>
  <span class="ft">Heb. shall not return.</span></p></aside>
 <aside epub:type='footnote' id="FN99"><p class="f"><a class="notebackref" href="#JB7_7"><span class="notemark">∥</span> 7.7</a>
@@ -1523,7 +1523,7 @@
 <aside epub:type='footnote' id="FN106"><p class="f"><a class="notebackref" href="#JB8_8"><span class="notemark">*</span> 8.8</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT4_32'>4. 32</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN107"><p class="f"><a class="notebackref" href="#JB8_9"><span class="notemark">*</span> 8.9</a>
- <span class="ft">Gen. <a href='GEN.xhtml#GN47_9'>47. 9</a>. 1 Chr. <a href='1CH.xhtml#R129_15'>29. 15</a>. ch. <a href='JOB.xhtml#JB7_6'>7. 6</a>. Ps. <a href='PSA.xhtml#PS89_5'>89. 5</a>. &amp;c <a href='PSA.xhtml#PS144_4'>144. 4</a>.</span></p></aside>
+ <span class="ft">Gen. <a href='GEN.xhtml#GN47_9'>47. 9</a>. 1 Chr. <a href='1CH.xhtml#R129_15'>29. 15</a>. ch. <a href='JOB.xhtml#JB7_6'>7. 6</a>. Ps. <a href='PSA.xhtml#PS29_14'>29. 14</a>. &amp;c <a href='PSA.xhtml#PS144_4'>144. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN108"><p class="f"><a class="notebackref" href="#JB8_9"><span class="notemark">†</span> 8.9</a>
  <span class="ft">Heb. not.</span></p></aside>
 <aside epub:type='footnote' id="FN109"><p class="f"><a class="notebackref" href="#JB8_12"><span class="notemark">*</span> 8.12</a>
@@ -1685,7 +1685,7 @@
 <aside epub:type='footnote' id="FN187"><p class="f"><a class="notebackref" href="#JB15_8"><span class="notemark">*</span> 15.8</a>
  <span class="ft">Rom. <a href='ROM.xhtml#RM11_34'>11 34</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN188"><p class="f"><a class="notebackref" href="#JB15_14"><span class="notemark">*</span> 15.14</a>
- <span class="ft">1 Kings <a href='1KI.xhtml#K18_46'>8. 46</a> 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. ch. <a href='JOB.xhtml#JB14_4'>14. 4</a> Ps. <a href='PSA.xhtml#PS14_3'>14. 3</a>. Prov. <a href='PRO.xhtml#PR20_9'>20. 9</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1. 8</a>.</span></p></aside>
+ <span class="ft">1 Kings <a href='1KI.xhtml#K18_46'>8. 46</a> 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. ch. <a href='JOB.xhtml#JB14_4'>14. 4</a> Ps. <a href='PSA.xhtml#PS14_3'>14. 3</a>. Prov. <a href='PRO.xhtml#PR20_9'>20. 9</a>. 1 John <a href='1JN.xhtml#J11_8'>1. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN189"><p class="f"><a class="notebackref" href="#JB15_15"><span class="notemark">*</span> 15.15</a>
  <span class="ft">ch. <a href='JOB.xhtml#JB4_18'>4. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN190"><p class="f"><a class="notebackref" href="#JB15_21"><span class="notemark">†</span> 15.21</a>
@@ -1779,7 +1779,7 @@
 <aside epub:type='footnote' id="FN234"><p class="f"><a class="notebackref" href="#JB20_2"><span class="notemark">†</span> 20.2</a>
  <span class="ft">Heb. my haste is in me.</span></p></aside>
 <aside epub:type='footnote' id="FN235"><p class="f"><a class="notebackref" href="#JB20_5"><span class="notemark">*</span> 20.5</a>
- <span class="ft">Ps. 37. <a href='PSA.xhtml#PS37_35'>35</a>, <a href='PSA.xhtml#PS37_35'>35</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS37_37'>37. 37</a></span></p></aside>
 <aside epub:type='footnote' id="FN236"><p class="f"><a class="notebackref" href="#JB20_5"><span class="notemark">†</span> 20.5</a>
  <span class="ft">Heb. from near.</span></p></aside>
 <aside epub:type='footnote' id="FN237"><p class="f"><a class="notebackref" href="#JB20_6"><span class="notemark">†</span> 20.6</a>
@@ -1889,7 +1889,7 @@
 <aside epub:type='footnote' id="FN289"><p class="f"><a class="notebackref" href="#JB23_12"><span class="notemark">∥</span> 23.12</a>
  <span class="ft">Or, my appointed portion</span></p></aside>
 <aside epub:type='footnote' id="FN290"><p class="f"><a class="notebackref" href="#JB23_13"><span class="notemark">*</span> 23.13</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS115_8'>115. 8</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS115_3'>115. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN291"><p class="f"><a class="notebackref" href="#JB24_2"><span class="notemark">*</span> 24.2</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT19_14'>19. 14</a>. &amp;c <a href='DEU.xhtml#DT27_17'>27. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN292"><p class="f"><a class="notebackref" href="#JB24_2"><span class="notemark">∥</span> 24.2</a>
@@ -2089,7 +2089,7 @@
 <aside epub:type='footnote' id="FN389"><p class="f"><a class="notebackref" href="#JB33_2"><span class="notemark">†</span> 33.2</a>
  <span class="ft">Heb. in my palate.</span></p></aside>
 <aside epub:type='footnote' id="FN390"><p class="f"><a class="notebackref" href="#JB33_6"><span class="notemark">*</span> 33.6</a>
- <span class="ft">ch. <a href='JOB.xhtml#JB9_35'>9. 35</a>. &amp;c <a href='JOB.xhtml#JB13_20'>13 20</a>.</span></p></aside>
+ <span class="ft">ch. <a href='JOB.xhtml#JB9_35'>9. 35</a>. &amp;c <a href='JOB.xhtml#JB23_20'>23 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN391"><p class="f"><a class="notebackref" href="#JB33_6"><span class="notemark">†</span> 33.6</a>
  <span class="ft">Heb according to thy mouth.</span></p></aside>
 <aside epub:type='footnote' id="FN392"><p class="f"><a class="notebackref" href="#JB33_6"><span class="notemark">†</span> 33.6</a>
