--- a/final product/OEBPS/JOS.xhtml
+++ b/final product/OEBPS/JOS.xhtml
@@ -941,7 +941,7 @@
 <aside epub:type='footnote' id="FN46"><p class="f"><a class="notebackref" href="#JS5_14"><span class="notemark">∥</span> 5.14</a>
  <span class="ft">Or, prince.</span></p></aside>
 <aside epub:type='footnote' id="FN47"><p class="f"><a class="notebackref" href="#JS5_15"><span class="notemark">*</span> 5.15</a>
- <span class="ft">Ex. <a href='EXO.xhtml#EX8_5'>8. 5</a>. Acts <a href='ACT.xhtml#AC7_33'>7. 33</a>.</span></p></aside>
+ <span class="ft">Ex. <a href='EXO.xhtml#EX3_5'>3. 5</a>. Acts <a href='ACT.xhtml#AC7_33'>7. 33</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN48"><p class="f"><a class="notebackref" href="#JS6_1"><span class="notemark">†</span> 6.1</a>
  <span class="ft">Heb. did shut up, and was shut up.</span></p></aside>
 <aside epub:type='footnote' id="FN49"><p class="f"><a class="notebackref" href="#JS6_5"><span class="notemark">†</span> 6.5</a>
@@ -1147,7 +1147,7 @@
 <aside epub:type='footnote' id="FN149"><p class="f"><a class="notebackref" href="#JS14_1"><span class="notemark">*</span> 14.1</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU34_17'>34. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN150"><p class="f"><a class="notebackref" href="#JS14_2"><span class="notemark">*</span> 14.2</a>
- <span class="ft">Num. <a href='NUM.xhtml#NU26_55'>26. 55</a>. &amp;c <a href='NUM.xhtml#NU33_64'>33. 64</a>.</span></p></aside>
+ <span class="ft">Num. <a href='NUM.xhtml#NU26_55'>26. 55</a>. &amp;c <a href='NUM.xhtml#NU33_54'>33. 54</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN151"><p class="f"><a class="notebackref" href="#JS14_5"><span class="notemark">*</span> 14.5</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU35_2'>35. 2</a>. ch. <a href='JOS.xhtml#JS21_2'>21. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN152"><p class="f"><a class="notebackref" href="#JS14_8"><span class="notemark">*</span> 14.8</a>
@@ -1193,7 +1193,7 @@
 <aside epub:type='footnote' id="FN172"><p class="f"><a class="notebackref" href="#JS17_2"><span class="notemark">*</span> 17.2</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU26_29'>26. 29</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN173"><p class="f"><a class="notebackref" href="#JS17_3"><span class="notemark">*</span> 17.3</a>
- <span class="ft">Num. <a href='NUM.xhtml#NU26_83'>26. 83</a>. &amp;c <a href='NUM.xhtml#NU27_1'>27. 1</a>. &amp;c <a href='NUM.xhtml#NU36_2'>36. 2</a>.</span></p></aside>
+ <span class="ft">Num. <a href='NUM.xhtml#NU26_33'>26. 33</a>. &amp;c <a href='NUM.xhtml#NU27_1'>27. 1</a>. &amp;c <a href='NUM.xhtml#NU36_2'>36. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN174"><p class="f"><a class="notebackref" href="#JS17_9"><span class="notemark">∥</span> 17.9</a>
  <span class="ft">Or, brook of reeds.</span></p></aside>
 <aside epub:type='footnote' id="FN175"><p class="f"><a class="notebackref" href="#JS17_15"><span class="notemark">∥</span> 17.15</a>
@@ -1253,7 +1253,7 @@
 <aside epub:type='footnote' id="FN202"><p class="f"><a class="notebackref" href="#JS22_24"><span class="notemark">†</span> 22.24</a>
  <span class="ft">Heb To morrow.</span></p></aside>
 <aside epub:type='footnote' id="FN203"><p class="f"><a class="notebackref" href="#JS22_27"><span class="notemark">*</span> 22.27</a>
- <span class="ft">Gen. <a href='GEN.xhtml#GN31_48'>31. 48</a>. ver. <a href='JOS.xhtml#JS22_34'>34</a> 24. 27.</span></p></aside>
+ <span class="ft">Gen. <a href='GEN.xhtml#GN31_48'>31. 48</a>. ver. <a href='JOS.xhtml#JS22_34'>34</a> chap. <a href='JOS.xhtml#JS24_27'>24. 27.</a></span></p></aside>
 <aside epub:type='footnote' id="FN204"><p class="f"><a class="notebackref" href="#JS22_30"><span class="notemark">†</span> 22.30</a>
  <span class="ft">Heb. it was good in their eyes.</span></p></aside>
 <aside epub:type='footnote' id="FN205"><p class="f"><a class="notebackref" href="#JS22_31"><span class="notemark">†</span> 22.31</a>
