--- a/final product/OEBPS/LEV.xhtml
+++ b/final product/OEBPS/LEV.xhtml
@@ -1393,7 +1393,7 @@
 <aside epub:type='footnote' id="FN156"><p class="f"><a class="notebackref" href="#LV19_15"><span class="notemark">*</span> 19.15</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX23_3'>23. 3</a>. Deut <a href='DEU.xhtml#DT1_17'>1. 17</a> &amp;c <a href='DEU.xhtml#DT16_19'>16 19</a>. Prov <a href='PRO.xhtml#PR24_23'>24. 23</a>. James <a href='JAS.xhtml#JM2_9'>2. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN157"><p class="f"><a class="notebackref" href="#LV19_17"><span class="notemark">*</span> 19.17</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN2_11'>2. 11</a>. Matt. <a href='MAT.xhtml#MT18_15'>18. 15</a>. Ecclus. <a href='SIR.xhtml#SR19_13'>19. 13</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J12_11'>2. 11</a>. Matt. <a href='MAT.xhtml#MT18_15'>18. 15</a>. Ecclus. <a href='SIR.xhtml#SR19_13'>19. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN158"><p class="f"><a class="notebackref" href="#LV19_17"><span class="notemark">∥</span> 19.17</a>
  <span class="ft">Or, that thou bear not sin for him.</span></p></aside>
 <aside epub:type='footnote' id="FN159"><p class="f"><a class="notebackref" href="#LV19_18"><span class="notemark">*</span> 19.18</a>
@@ -1435,7 +1435,7 @@
 <aside epub:type='footnote' id="FN177"><p class="f"><a class="notebackref" href="#LV20_10"><span class="notemark">*</span> 20.10</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT22_22'>22 22</a>. John <a href='JHN.xhtml#JN8_4'>8. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN178"><p class="f"><a class="notebackref" href="#LV20_11"><span class="notemark">*</span> 20.11</a>
- <span class="ft">ch. <a href='LEV.xhtml#LV13_8'>13. 8</a></span></p></aside>
+ <span class="ft">ch. <a href='LEV.xhtml#LV18_8'>18. 8</a></span></p></aside>
 <aside epub:type='footnote' id="FN179"><p class="f"><a class="notebackref" href="#LV20_11"><span class="notemark">‡</span> 20.11</a>
  <span class="ft">[1611 omits surely]</span></p></aside>
 <aside epub:type='footnote' id="FN180"><p class="f"><a class="notebackref" href="#LV20_13"><span class="notemark">*</span> 20.13</a>
@@ -1625,7 +1625,7 @@
 <aside epub:type='footnote' id="FN272"><p class="f"><a class="notebackref" href="#LV26_8"><span class="notemark">*</span> 26.8</a>
  <span class="ft">Josh. <a href='JOS.xhtml#JS23_10'>23. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN273"><p class="f"><a class="notebackref" href="#LV26_11"><span class="notemark">*</span> 26.11</a>
- <span class="ft">Ezek. <a href='EZK.xhtml#EK87_26'>87. 26</a>.</span></p></aside>
+ <span class="ft">Ezek. <a href='EZK.xhtml#EK37_26'>37. 26</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN274"><p class="f"><a class="notebackref" href="#LV26_12"><span class="notemark">*</span> 26.12</a>
  <span class="ft">2 Cor. <a href='2CO.xhtml#C26_16'>6. 16</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN275"><p class="f"><a class="notebackref" href="#LV26_14"><span class="notemark">*</span> 26.14</a>
