--- a/final product/OEBPS/NEH.xhtml
+++ b/final product/OEBPS/NEH.xhtml
@@ -96,8 +96,8 @@
 <span class="verse" id="NH3_23">23&#160;</span> After him repaired Benjamin and Hashub over against their house. After him repaired Azariah the son of Maaseiah the son of Ananiah by his house.
 <span class="verse" id="NH3_24">24&#160;</span> After him repaired Binnui the son of Henadad another piece, from the house of Azariah unto the turning <span class='add'>of the wall</span>, even unto the corner.
 <span class="verse" id="NH3_25">25&#160;</span> Palal the son of Uzai, over against the turning <span class='add'>of the wall</span>, and the tower which lieth out from the king’s high house, that <span class='add'>was</span> by the <a href='#FN16' epub:type='noteref' class='noteref'>*</a>court of the prison. After him Pedaiah the son of Parosh.
-<span class="verse" id="NH3_26">26&#160;</span> Moreover the Nethinims dwelt in <a href='#FN17' epub:type='noteref' class='noteref'>*</a>Ophel, unto <span class='add'>the place</span> over against the water gate toward the east, and the tower that lieth out.
-<span class="verse" id="NH3_27">27&#160;</span><a href='#FN18' epub:type='noteref' class='noteref'>∥</a> After them the Tekoites repaired another piece, over against the great tower that lieth out, even unto the wall of Ophel.
+<span class="verse" id="NH3_26">26&#160;</span> Moreover the Nethinims dwelt in <a href='#FN17' epub:type='noteref' class='noteref'>*</a><a href='#FN18' epub:type='noteref' class='noteref'>∥</a>Ophel, unto <span class='add'>the place</span> over against the water gate toward the east, and the tower that lieth out.
+<span class="verse" id="NH3_27">27&#160;</span> After them the Tekoites repaired another piece, over against the great tower that lieth out, even unto the wall of Ophel.
 <span class="verse" id="NH3_28">28&#160;</span> From above the horse gate repaired the priests, every one over against his house.
 <span class="verse" id="NH3_29">29&#160;</span> After them repaired Zadok the son of Immer over against his house. After him repaired also Shemaiah the son of Shechaniah, the keeper of the east gate.
 <span class="verse" id="NH3_30">30&#160;</span> After him repaired Hananiah the son of Shelemiah, and Hanun the sixth son of Zalaph, another piece. After him repaired Meshullam the son of Berechiah over against his chamber.
@@ -536,10 +536,10 @@
  <span class="ft">Jer. <a href='JER.xhtml#JR32_2'>32. 2</a></span></p></aside>
 <aside epub:type='footnote' id="FN17"><p class="f"><a class="notebackref" href="#NH3_26"><span class="notemark">*</span> 3.26</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R227_3'>27. 3</a>.</span></p></aside>
-<aside epub:type='footnote' id="FN18"><p class="f"><a class="notebackref" href="#NH3_27"><span class="notemark">∥</span> 3.27</a>
+<aside epub:type='footnote' id="FN18"><p class="f"><a class="notebackref" href="#NH3_26"><span class="notemark">∥</span> 3.26</a>
  <span class="ft">Or, the tower.</span></p></aside>
 <aside epub:type='footnote' id="FN19"><p class="f"><a class="notebackref" href="#NH3_31"><span class="notemark">∥</span> 3.31</a>
- <span class="ft">Or, earner chamber.</span></p></aside>
+ <span class="ft">Or, corner chamber.</span></p></aside>
 <aside epub:type='footnote' id="FN20"><p class="f"><a class="notebackref" href="#NH4_2"><span class="notemark">†</span> 4.2</a>
  <span class="ft">Heb. leave to themselves.</span></p></aside>
 <aside epub:type='footnote' id="FN21"><p class="f"><a class="notebackref" href="#NH4_4"><span class="notemark">†</span> 4.4</a>
@@ -641,7 +641,7 @@
 <aside epub:type='footnote' id="FN69"><p class="f"><a class="notebackref" href="#NH9_9"><span class="notemark">*</span> 9.9</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX3_7'>3. 7</a>. &amp;c <a href='EXO.xhtml#EX14_10'>14. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN70"><p class="f"><a class="notebackref" href="#NH9_10"><span class="notemark">*</span> 9.10</a>
- <span class="ft">Ex. <a href='EXO.xhtml#7_0'>7</a>, <a href='EXO.xhtml#8_0'>8</a>, <a href='EXO.xhtml#9_0'>9</a>, <a href='EXO.xhtml#10_0'>10</a>, <a href='EXO.xhtml#12_0'>12</a>, &amp;c <a href='EXO.xhtml#14_0'>14</a>, chapters.</span></p></aside>
+ <span class="ft">Ex. <a href='EXO.xhtml#EX7_0'>7</a>, <a href='EXO.xhtml#EX8_0'>8</a>, <a href='EXO.xhtml#EX9_0'>9</a>, <a href='EXO.xhtml#EX10_0'>10</a>, <a href='EXO.xhtml#EX12_0'>12</a>, &amp;c <a href='EXO.xhtml#EX14_0'>14</a>, chapters.</span></p></aside>
 <aside epub:type='footnote' id="FN71"><p class="f"><a class="notebackref" href="#NH9_11"><span class="notemark">*</span> 9.11</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX14_22'>14. 22</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN72"><p class="f"><a class="notebackref" href="#NH9_11"><span class="notemark">*</span> 9.11</a>
@@ -719,7 +719,7 @@
 <aside epub:type='footnote' id="FN108"><p class="f"><a class="notebackref" href="#NH10_31"><span class="notemark">†</span> 10.31</a>
  <span class="ft">Heb. every hand.</span></p></aside>
 <aside epub:type='footnote' id="FN109"><p class="f"><a class="notebackref" href="#NH10_34"><span class="notemark">*</span> 10.34</a>
- <span class="ft">Num. <a href='NUM.xhtml#NU28_0'>28,</a> &amp;c <a href='NUM.xhtml#NU39_0'>39.</a> Ex. <a href='EXO.xhtml#EX23_19'>23. 19</a>. Lev. <a href='LEV.xhtml#LV19_23'>19. 23</a>.</span></p></aside>
+ <span class="ft">Num. <a href='NUM.xhtml#NU28_0'>28,</a> &amp;c <a href='NUM.xhtml#NU29_0'>29.</a> Ex. <a href='EXO.xhtml#EX23_19'>23. 19</a>. Lev. <a href='LEV.xhtml#LV19_23'>19. 23</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN110"><p class="f"><a class="notebackref" href="#NH10_36"><span class="notemark">*</span> 10.36</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX13_2'>13. 2</a> Lev. <a href='LEV.xhtml#LV23_17'>23. 17</a>. Num. <a href='NUM.xhtml#NU15_19'>15. 19</a>. &amp;c <a href='NUM.xhtml#NU18_12'>18. 12</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN111"><p class="f"><a class="notebackref" href="#NH10_38"><span class="notemark">*</span> 10.38</a>
