--- a/final product/OEBPS/PRO.xhtml
+++ b/final product/OEBPS/PRO.xhtml
@@ -1134,7 +1134,7 @@
 <aside epub:type='footnote' id="FN6"><p class="f"><a class="notebackref" href="#PR1_9"><span class="notemark">†</span> 1.9</a>
  <span class="ft">Heb. an adding</span></p></aside>
 <aside epub:type='footnote' id="FN7"><p class="f"><a class="notebackref" href="#PR1_16"><span class="notemark">*</span> 1.16</a>
- <span class="ft">Is. <a href='ISA.xhtml#IS59_7'>59. 7</a>. Rom. <a href='ROM.xhtml#RM8_15'>8. 15</a>.</span></p></aside>
+ <span class="ft">Is. <a href='ISA.xhtml#IS59_7'>59. 7</a>. Rom. <a href='ROM.xhtml#RM3_15'>3. 15</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN8"><p class="f"><a class="notebackref" href="#PR1_17"><span class="notemark">†</span> 1.17</a>
  <span class="ft">Heb. in the eyes of every thing that hath a wing.</span></p></aside>
 <aside epub:type='footnote' id="FN9"><p class="f"><a class="notebackref" href="#PR1_20"><span class="notemark">†</span> 1.20</a>
@@ -1282,7 +1282,7 @@
 <aside epub:type='footnote' id="FN80"><p class="f"><a class="notebackref" href="#PR6_35"><span class="notemark">†</span> 6.35</a>
  <span class="ft">Heb. He will not accept the face of any ransom.</span></p></aside>
 <aside epub:type='footnote' id="FN81"><p class="f"><a class="notebackref" href="#PR7_3"><span class="notemark">*</span> 7.3</a>
- <span class="ft">Deut. <a href='DEU.xhtml#DT6_8'>6. 8</a>. &amp;c <a href='DEU.xhtml#DT11_18'>11. 18</a>. ch. <a href='PRO.xhtml#PR8_3'>8. 3</a>.</span></p></aside>
+ <span class="ft">Deut. <a href='DEU.xhtml#DT6_8'>6. 8</a>. &amp;c <a href='DEU.xhtml#DT11_18'>11. 18</a>. ch. <a href='PRO.xhtml#PR3_3'>3. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN82"><p class="f"><a class="notebackref" href="#PR7_5"><span class="notemark">*</span> 7.5</a>
  <span class="ft">ch. <a href='PRO.xhtml#PR5_3'>5. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN83"><p class="f"><a class="notebackref" href="#PR7_7"><span class="notemark">†</span> 7.7</a>
@@ -1806,7 +1806,7 @@
 <aside epub:type='footnote' id="FN342"><p class="f"><a class="notebackref" href="#PR20_7"><span class="notemark">*</span> 20.7</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS112_2'>112. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN343"><p class="f"><a class="notebackref" href="#PR20_9"><span class="notemark">*</span> 20.9</a>
- <span class="ft">1 Kin. <a href='1KI.xhtml#K18_46'>8 46</a>. 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Job <a href='JOB.xhtml#JB14_4'>14. 4</a>. Ps. <a href='PSA.xhtml#PS51_5'>51. 5</a> Eccles. <a href='ECC.xhtml#EC7_20'>7. 20</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1. 8</a>.</span></p></aside>
+ <span class="ft">1 Kin. <a href='1KI.xhtml#K18_46'>8 46</a>. 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Job <a href='JOB.xhtml#JB14_4'>14. 4</a>. Ps. <a href='PSA.xhtml#PS51_5'>51. 5</a> Eccles. <a href='ECC.xhtml#EC7_20'>7. 20</a>. 1 John <a href='1JN.xhtml#J11_8'>1. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN344"><p class="f"><a class="notebackref" href="#PR20_10"><span class="notemark">*</span> 20.10</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT25_13'>25, 13</a>,&amp;c. ch <a href='PRO.xhtml#PR11_1'>11. 1</a>. &amp;c <a href='PRO.xhtml#PR16_11'>16. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN345"><p class="f"><a class="notebackref" href="#PR20_10"><span class="notemark">†</span> 20.10</a>
@@ -2222,7 +2222,7 @@
 <aside epub:type='footnote' id="FN550"><p class="f"><a class="notebackref" href="#PR28_12"><span class="notemark">∥</span> 28.12</a>
  <span class="ft">Or, sought for.</span></p></aside>
 <aside epub:type='footnote' id="FN551"><p class="f"><a class="notebackref" href="#PR28_13"><span class="notemark">*</span> 28.13</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS32_5'>32. 5</a>. 1 John 1. <a href='1JN.xhtml#1JN1_9'>9</a>, <a href='1JN.xhtml#1JN1_10'>10</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS32_5'>32. 5</a>. 1 John 1. <a href='1JN.xhtml#J11_9'>9</a>, <a href='1JN.xhtml#J11_10'>10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN552"><p class="f"><a class="notebackref" href="#PR28_14"><span class="notemark">*</span> 28.14</a>
  <span class="ft">Rom. <a href='ROM.xhtml#RM11_20'>11. 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN553"><p class="f"><a class="notebackref" href="#PR28_17"><span class="notemark">*</span> 28.17</a>
