--- a/final product/OEBPS/PSA.xhtml
+++ b/final product/OEBPS/PSA.xhtml
@@ -5610,7 +5610,7 @@
 <aside epub:type='footnote' id="FN5"><p class="f"><a class="notebackref" href="#PS1_3"><span class="notemark">†</span> 1.3</a>
  <span class="ft">Heb. fade.</span></p></aside>
 <aside epub:type='footnote' id="FN6"><p class="f"><a class="notebackref" href="#PS1_4"><span class="notemark">*</span> 1.4</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS35_5'>35 5</a>. Is. <a href='ISA.xhtml#IS17_18'>17. 18</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS35_5'>35 5</a>. Is. <a href='ISA.xhtml#IS17_13'>17. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN7"><p class="f"><a class="notebackref" href="#PS2_1"><span class="notemark">*</span> 2.1</a>
  <span class="ft">Acts <a href='ACT.xhtml#AC4_25'>4. 25</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN8"><p class="f"><a class="notebackref" href="#PS2_1"><span class="notemark">∥</span> 2.1</a>
@@ -5824,7 +5824,7 @@
 <aside epub:type='footnote' id="FN112"><p class="f"><a class="notebackref" href="#PS16_0"><span class="notemark">∥</span> 16.0</a>
  <span class="ft">Or, A golden Psalm of David.</span></p></aside>
 <aside epub:type='footnote' id="FN113"><p class="f"><a class="notebackref" href="#PS16_2"><span class="notemark">*</span> 16.2</a>
- <span class="ft">Job <a href='JOB.xhtml#JB22_2'>22. 2</a>. &amp;c <a href='JOB.xhtml#JB35_7'>35. 7</a>. Ps. <a href='PSA.xhtml#PS50_9'>50. 9</a>.</span></p></aside>
+ <span class="ft">Job <a href='JOB.xhtml#JB22_2'>22. 2</a>. &amp;c <a href='JOB.xhtml#JB35_7'>35. 7</a>. Ps. <a href='PSA.xhtml#PS50_10'>50. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN114"><p class="f"><a class="notebackref" href="#PS16_4"><span class="notemark">∥</span> 16.4</a>
  <span class="ft">Or, give gifts to another.</span></p></aside>
 <aside epub:type='footnote' id="FN115"><p class="f"><a class="notebackref" href="#PS16_5"><span class="notemark">*</span> 16.5</a>
@@ -6026,7 +6026,7 @@
 <aside epub:type='footnote' id="FN213"><p class="f"><a class="notebackref" href="#PS24_6"><span class="notemark">∥</span> 24.6</a>
  <span class="ft">Or, O God of Jacob.</span></p></aside>
 <aside epub:type='footnote' id="FN214"><p class="f"><a class="notebackref" href="#PS25_2"><span class="notemark">*</span> 25.2</a>
- <span class="ft">Ps <a href='PSA.xhtml#PS22_5'>22 5</a>. &amp;c <a href='PSA.xhtml#PS31_1'>31. 1</a>. &amp;c <a href='PSA.xhtml#PS34_8'>34. 8</a> Is. <a href='ISA.xhtml#IS28_16'>28 16</a> Rom. <a href='ROM.xhtml#RM10_11'>10. 11</a>.</span></p></aside>
+ <span class="ft">Ps <a href='PSA.xhtml#PS22_5'>22 5</a>. &amp;c <a href='PSA.xhtml#PS31_2'>31. 2</a>. &amp;c <a href='PSA.xhtml#PS34_9'>34. 9</a> Is. <a href='ISA.xhtml#IS28_16'>28 16</a> Rom. <a href='ROM.xhtml#RM10_11'>10. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN215"><p class="f"><a class="notebackref" href="#PS25_4"><span class="notemark">*</span> 25.4</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS27_11'>27. 11</a>. &amp;c <a href='PSA.xhtml#PS86_11'>86. 11</a>. &amp;c <a href='PSA.xhtml#PS119_0'>119.</a></span></p></aside>
 <aside epub:type='footnote' id="FN216"><p class="f"><a class="notebackref" href="#PS25_6"><span class="notemark">*</span> 25.6</a>
@@ -6056,7 +6056,7 @@
 <aside epub:type='footnote' id="FN228"><p class="f"><a class="notebackref" href="#PS26_10"><span class="notemark">†</span> 26.10</a>
  <span class="ft">Heb. filled with.</span></p></aside>
 <aside epub:type='footnote' id="FN229"><p class="f"><a class="notebackref" href="#PS27_1"><span class="notemark">*</span> 27.1</a>
- <span class="ft">7. 8.</span></p></aside>
+ <span class="ft"><a href='MIC.xhtml#MC7_8'>Mica 7. 8.</a></span></p></aside>
 <aside epub:type='footnote' id="FN230"><p class="f"><a class="notebackref" href="#PS27_1"><span class="notemark">*</span> 27.1</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS118_6'>118. 6</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN231"><p class="f"><a class="notebackref" href="#PS27_2"><span class="notemark">†</span> 27.2</a>
@@ -6072,7 +6072,7 @@
 <aside epub:type='footnote' id="FN236"><p class="f"><a class="notebackref" href="#PS27_10"><span class="notemark">†</span> 27.10</a>
  <span class="ft">Heb. will gather me.</span></p></aside>
 <aside epub:type='footnote' id="FN237"><p class="f"><a class="notebackref" href="#PS27_11"><span class="notemark">*</span> 27.11</a>
- <span class="ft">Ps <a href='PSA.xhtml#PS25_4'>25. 4</a>. &amp;c <a href='PSA.xhtml#PS86_11'>86. 11</a>. &amp;c <a href='PSA.xhtml#PS110_0'>110.</a></span></p></aside>
+ <span class="ft">Ps <a href='PSA.xhtml#PS25_4'>25. 4</a>. &amp;c <a href='PSA.xhtml#PS86_11'>86. 11</a>. &amp;c <a href='PSA.xhtml#PS119_0'>119.</a></span></p></aside>
 <aside epub:type='footnote' id="FN238"><p class="f"><a class="notebackref" href="#PS27_11"><span class="notemark">†</span> 27.11</a>
  <span class="ft">Heb. a way of plainness.</span></p></aside>
 <aside epub:type='footnote' id="FN239"><p class="f"><a class="notebackref" href="#PS27_11"><span class="notemark">†</span> 27.11</a>
@@ -6150,7 +6150,7 @@
 <aside epub:type='footnote' id="FN275"><p class="f"><a class="notebackref" href="#PS32_1"><span class="notemark">*</span> 32.1</a>
  <span class="ft">Rom.<a href='ROM.xhtml#RM4_7'>4. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN276"><p class="f"><a class="notebackref" href="#PS32_5"><span class="notemark">*</span> 32.5</a>
- <span class="ft">Prov. <a href='PRO.xhtml#PR28_13'>28. 13</a>. Is. <a href='ISA.xhtml#IS65_24'>65. 24</a>. 1 John <a href='1JN.xhtml#1JN1_9'>1. 9</a>.</span></p></aside>
+ <span class="ft">Prov. <a href='PRO.xhtml#PR28_13'>28. 13</a>. Is. <a href='ISA.xhtml#IS65_24'>65. 24</a>. 1 John <a href='1JN.xhtml#J11_9'>1. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN277"><p class="f"><a class="notebackref" href="#PS32_6"><span class="notemark">†</span> 32.6</a>
  <span class="ft">Heb. in a time of finding.</span></p></aside>
 <aside epub:type='footnote' id="FN278"><p class="f"><a class="notebackref" href="#PS32_7"><span class="notemark">*</span> 32.7</a>
@@ -6594,7 +6594,7 @@
 <aside epub:type='footnote' id="FN497"><p class="f"><a class="notebackref" href="#PS62_11"><span class="notemark">∥</span> 62.11</a>
  <span class="ft">Or, strength.</span></p></aside>
 <aside epub:type='footnote' id="FN498"><p class="f"><a class="notebackref" href="#PS62_12"><span class="notemark">*</span> 62.12</a>
- <span class="ft">Job <a href='JOB.xhtml#JB84_11'>84. 11</a>. Prov. <a href='PRO.xhtml#PR24_12'>24. 12</a> Jer. <a href='JER.xhtml#JR32_19'>32. 19</a> Ezek. <a href='EZK.xhtml#EK7_27'>7. 27</a>. Matt. <a href='MAT.xhtml#MT16_27'>16. 27</a>. Rom. <a href='ROM.xhtml#RM2_6'>2 6</a>. 2 Cor. <a href='2CO.xhtml#C25_10'>5. 10</a>. Eph. <a href='EPH.xhtml#EP6_8'>6. 8</a>. Col. <a href='COL.xhtml#CL3_25'>3 25</a>. 1 Pet. <a href='1PE.xhtml#P11_17'>1. 17</a>. Rev. <a href='REV.xhtml#RV23_12'>23. 12</a>.</span></p></aside>
+ <span class="ft">Job <a href='JOB.xhtml#JB34_11'>34. 11</a>. Prov. <a href='PRO.xhtml#PR24_12'>24. 12</a> Jer. <a href='JER.xhtml#JR32_19'>32. 19</a> Ezek. <a href='EZK.xhtml#EK7_27'>7. 27</a>. Matt. <a href='MAT.xhtml#MT16_27'>16. 27</a>. Rom. <a href='ROM.xhtml#RM2_6'>2 6</a>. 2 Cor. <a href='2CO.xhtml#C25_10'>5. 10</a>. Eph. <a href='EPH.xhtml#EP6_8'>6. 8</a>. Col. <a href='COL.xhtml#CL3_25'>3 25</a>. 1 Pet. <a href='1PE.xhtml#P11_17'>1. 17</a>. Rev. <a href='REV.xhtml#RV22_12'>22. 12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN499"><p class="f"><a class="notebackref" href="#PS63_1"><span class="notemark">†</span> 63.1</a>
  <span class="ft">Heb. weary.</span></p></aside>
 <aside epub:type='footnote' id="FN500"><p class="f"><a class="notebackref" href="#PS63_1"><span class="notemark">†</span> 63.1</a>
@@ -6682,7 +6682,7 @@
 <aside epub:type='footnote' id="FN541"><p class="f"><a class="notebackref" href="#PS68_30"><span class="notemark">∥</span> 68.30</a>
  <span class="ft">Or, the beasts of the reeds.</span></p></aside>
 <aside epub:type='footnote' id="FN542"><p class="f"><a class="notebackref" href="#PS68_30"><span class="notemark">∥</span> 68.30</a>
- <span class="ft">Or, he scaltereth.</span></p></aside>
+ <span class="ft">Or, he scattereth.</span></p></aside>
 <aside epub:type='footnote' id="FN543"><p class="f"><a class="notebackref" href="#PS68_33"><span class="notemark">†</span> 68.33</a>
  <span class="ft">Heb. give.</span></p></aside>
 <aside epub:type='footnote' id="FN544"><p class="f"><a class="notebackref" href="#PS68_34"><span class="notemark">∥</span> 68.34</a>
@@ -6894,7 +6894,7 @@
 <aside epub:type='footnote' id="FN647"><p class="f"><a class="notebackref" href="#PS78_58"><span class="notemark">*</span> 78.58</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT32_21'>32 21</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN648"><p class="f"><a class="notebackref" href="#PS78_60"><span class="notemark">*</span> 78.60</a>
- <span class="ft">1 Sam. <a href='1SA.xhtml#S11_11'>1 11</a>.</span></p></aside>
+ <span class="ft">1 King <a href='1KI.xhtml#K14_10'>4 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN649"><p class="f"><a class="notebackref" href="#PS78_63"><span class="notemark">†</span> 78.63</a>
  <span class="ft">Heb. praised.</span></p></aside>
 <aside epub:type='footnote' id="FN650"><p class="f"><a class="notebackref" href="#PS78_69"><span class="notemark">†</span> 78.69</a>
@@ -6950,7 +6950,7 @@
 <aside epub:type='footnote' id="FN675"><p class="f"><a class="notebackref" href="#PS81_15"><span class="notemark">∥</span> 81.15</a>
  <span class="ft">Or, yielded feigned obedience.</span></p></aside>
 <aside epub:type='footnote' id="FN676"><p class="f"><a class="notebackref" href="#PS81_15"><span class="notemark">†</span> 81.15</a>
- <span class="ft">Heb. bied.</span></p></aside>
+ <span class="ft">Heb. lied.</span></p></aside>
 <aside epub:type='footnote' id="FN677"><p class="f"><a class="notebackref" href="#PS81_16"><span class="notemark">†</span> 81.16</a>
  <span class="ft">Heb. with the fat of wheat.</span></p></aside>
 <aside epub:type='footnote' id="FN678"><p class="f"><a class="notebackref" href="#PS82_0"><span class="notemark">∥</span> 82.0</a>
@@ -7072,7 +7072,7 @@
 <aside epub:type='footnote' id="FN736"><p class="f"><a class="notebackref" href="#PS90_1"><span class="notemark">†</span> 90.1</a>
  <span class="ft">Heb. in generation and generation.</span></p></aside>
 <aside epub:type='footnote' id="FN737"><p class="f"><a class="notebackref" href="#PS90_4"><span class="notemark">*</span> 90.4</a>
- <span class="ft">2 Pet. <a href='2PE.xhtml#P28_8'>8. 8</a>.</span></p></aside>
+ <span class="ft">2 Pet. <a href='2PE.xhtml#P23_8'>3. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN738"><p class="f"><a class="notebackref" href="#PS90_4"><span class="notemark">∥</span> 90.4</a>
  <span class="ft">Or, when he hath passed them.</span></p></aside>
 <aside epub:type='footnote' id="FN739"><p class="f"><a class="notebackref" href="#PS90_5"><span class="notemark">∥</span> 90.5</a>
@@ -7200,7 +7200,7 @@
 <aside epub:type='footnote' id="FN800"><p class="f"><a class="notebackref" href="#PS102_26"><span class="notemark">†</span> 102.26</a>
  <span class="ft">Heb. stand.</span></p></aside>
 <aside epub:type='footnote' id="FN801"><p class="f"><a class="notebackref" href="#PS103_8"><span class="notemark">*</span> 103.8</a>
- <span class="ft">Ex. 34. <a href='EXO.xhtml#EX34_6'>6</a>, <a href='EXO.xhtml#EX34_7'>7</a>. Num. <a href='NUM.xhtml#NU14_18'>14. 18</a>. Deut. <a href='DEU.xhtml#DT5_10'>5. 10</a>. Neh. <a href='NEH.xhtml#NH9_17'>9. 17</a>. Ps. <a href='PSA.xhtml#PS36_15'>36. 15</a>. Jer. <a href='JER.xhtml#JR32_18'>32. 18</a>.</span></p></aside>
+ <span class="ft">Ex. 34. <a href='EXO.xhtml#EX34_6'>6</a>, <a href='EXO.xhtml#EX34_7'>7</a>. Num. <a href='NUM.xhtml#NU14_18'>14. 18</a>. Deut. <a href='DEU.xhtml#DT5_10'>5. 10</a>. Neh. <a href='NEH.xhtml#NH9_17'>9. 17</a>. Ps. <a href='PSA.xhtml#PS86_15'>86. 15</a>. Jer. <a href='JER.xhtml#JR32_18'>32. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN802"><p class="f"><a class="notebackref" href="#PS103_8"><span class="notemark">†</span> 103.8</a>
  <span class="ft">Heb. great of mercy.</span></p></aside>
 <aside epub:type='footnote' id="FN803"><p class="f"><a class="notebackref" href="#PS103_11"><span class="notemark">†</span> 103.11</a>
@@ -7286,7 +7286,7 @@
 <aside epub:type='footnote' id="FN843"><p class="f"><a class="notebackref" href="#PS105_36"><span class="notemark">*</span> 105.36</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX12_29'>12. 29</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN844"><p class="f"><a class="notebackref" href="#PS105_37"><span class="notemark">*</span> 105.37</a>
- <span class="ft">Ex. <a href='EXO.xhtml#EX12_85'>12. 85</a>.</span></p></aside>
+ <span class="ft">Ex. <a href='EXO.xhtml#EX12_29'>12. 29</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN845"><p class="f"><a class="notebackref" href="#PS105_38"><span class="notemark">*</span> 105.38</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX12_33'>12. 33</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN846"><p class="f"><a class="notebackref" href="#PS105_39"><span class="notemark">*</span> 105.39</a>
@@ -7356,7 +7356,7 @@
 <aside epub:type='footnote' id="FN878"><p class="f"><a class="notebackref" href="#PS107_3"><span class="notemark">†</span> 107.3</a>
  <span class="ft">Heb. from the sea.</span></p></aside>
 <aside epub:type='footnote' id="FN879"><p class="f"><a class="notebackref" href="#PS107_18"><span class="notemark">*</span> 107.18</a>
- <span class="ft">Job <a href='JOB.xhtml#JB83_20'>83. 20</a>.</span></p></aside>
+ <span class="ft">Job <a href='JOB.xhtml#JB33_20'>33. 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN880"><p class="f"><a class="notebackref" href="#PS107_22"><span class="notemark">†</span> 107.22</a>
  <span class="ft">Heb. singing.</span></p></aside>
 <aside epub:type='footnote' id="FN881"><p class="f"><a class="notebackref" href="#PS107_25"><span class="notemark">†</span> 107.25</a>
@@ -7598,7 +7598,7 @@
 <aside epub:type='footnote' id="FN999"><p class="f"><a class="notebackref" href="#PS127_5"><span class="notemark">†</span> 127.5</a>
  <span class="ft">Heb. hath filled his quiver with them.</span></p></aside>
 <aside epub:type='footnote' id="FN1000"><p class="f"><a class="notebackref" href="#PS127_5"><span class="notemark">∥</span> 127.5</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS18_47'>18. 47</a>. or, destroy.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS18_45'>18. 45</a>. or, destroy.</span></p></aside>
 <aside epub:type='footnote' id="FN1001"><p class="f"><a class="notebackref" href="#PS129_1"><span class="notemark">∥</span> 129.1</a>
  <span class="ft">Or, Much.</span></p></aside>
 <aside epub:type='footnote' id="FN1002"><p class="f"><a class="notebackref" href="#PS130_6"><span class="notemark">∥</span> 130.6</a>
@@ -7614,7 +7614,7 @@
 <aside epub:type='footnote' id="FN1007"><p class="f"><a class="notebackref" href="#PS132_5"><span class="notemark">†</span> 132.5</a>
  <span class="ft">Heb. habitations.</span></p></aside>
 <aside epub:type='footnote' id="FN1008"><p class="f"><a class="notebackref" href="#PS132_8"><span class="notemark">*</span> 132.8</a>
- <span class="ft">Num. <a href='NUM.xhtml#NU10_85'>10. 85</a>. 2 Chr. <a href='2CH.xhtml#R26_41'>6. 41</a>.</span></p></aside>
+ <span class="ft">Num. <a href='NUM.xhtml#NU10_35'>10. 35</a>. 2 Chr. <a href='2CH.xhtml#R26_41'>6. 41</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1009"><p class="f"><a class="notebackref" href="#PS132_11"><span class="notemark">*</span> 132.11</a>
  <span class="ft">2 Sam. <a href='2SA.xhtml#S27_12'>7. 12</a>. 1 Kin. <a href='1KI.xhtml#K18_25'>8. 25</a>. 2 Chr. <a href='2CH.xhtml#R26_16'>6. 16</a>. Luke <a href='LUK.xhtml#LK1_69'>1. 69</a>. Acts <a href='ACT.xhtml#AC2_30'>2. 30</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1010"><p class="f"><a class="notebackref" href="#PS132_11"><span class="notemark">†</span> 132.11</a>
@@ -7682,7 +7682,7 @@
 <aside epub:type='footnote' id="FN1041"><p class="f"><a class="notebackref" href="#PS137_6"><span class="notemark">†</span> 137.6</a>
  <span class="ft">Heb. the head of my joy.</span></p></aside>
 <aside epub:type='footnote' id="FN1042"><p class="f"><a class="notebackref" href="#PS137_7"><span class="notemark">*</span> 137.7</a>
- <span class="ft">Obad. <a href='OBA.xhtml#OB1_10'>10</a>. &amp;c.</span></p></aside>
+ <span class="ft">Obad. <a href='OBA.xhtml#OB1_12'>12</a>, <a href='OBA.xhtml#OB1_13'>13</a> &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN1043"><p class="f"><a class="notebackref" href="#PS137_7"><span class="notemark">†</span> 137.7</a>
  <span class="ft">Heb. Make bare.</span></p></aside>
 <aside epub:type='footnote' id="FN1044"><p class="f"><a class="notebackref" href="#PS137_8"><span class="notemark">†</span> 137.8</a>
@@ -7756,9 +7756,9 @@
 <aside epub:type='footnote' id="FN1078"><p class="f"><a class="notebackref" href="#PS144_1"><span class="notemark">*</span> 144.1</a>
  <span class="ft">2 Sam. <a href='2SA.xhtml#S222_35'>22. 35</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1079"><p class="f"><a class="notebackref" href="#PS144_1"><span class="notemark">†</span> 144.1</a>
- <span class="ft">Heb to the: war, &amp;c.</span></p></aside>
+ <span class="ft">Heb to the war, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN1080"><p class="f"><a class="notebackref" href="#PS144_2"><span class="notemark">*</span> 144.2</a>
- <span class="ft">2 Sam. 22. <a href='2SA.xhtml#S222_2'>2</a>, <a href='2SA.xhtml#S222_3'>3</a>, <a href='2SA.xhtml#S222_40'>40</a>.</span></p></aside>
+ <span class="ft">2 Sam. 22. <a href='2SA.xhtml#S222_2'>2</a>. <a href='2SA.xhtml#S222_3'>3</a>. &amp; <a href='2SA.xhtml#S222_35'>.35</a>. and <a href='2SA.xhtml#S222_49'>49</a>. verses.</span></p></aside>
 <aside epub:type='footnote' id="FN1081"><p class="f"><a class="notebackref" href="#PS144_2"><span class="notemark">∥</span> 144.2</a>
  <span class="ft">Or, My mercy.</span></p></aside>
 <aside epub:type='footnote' id="FN1082"><p class="f"><a class="notebackref" href="#PS144_3"><span class="notemark">*</span> 144.3</a>
